# pbg-copasi

./: .gitignore  README.md  pyproject.toml
demo/: composite_report.py  demo_report.py
pbg_copasi/: __init__.py  processes.py  types.py  visualizations.py
pbg_copasi/composites/: __init__.py  steady-state.composite.yaml  utc-process.composite.yaml  utc-step.composite.yaml
tests/: test_composites.py  test_processes.py
